--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -37,6 +37,12 @@ header.home {
     margin: 8px 0px 4px 0px;
 }
 
+ul.news-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
 /*iPhone < 5:*/
 @media screen and (device-aspect-ratio: 2/3) {}
 
